# protonCoin

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  app.py  docker-compose.yaml  idp_certificate.pem  pyproject.toml  requirements.txt  sp_certificate.pem  sp_private-key.pem  test.db  uploads.py  user_import_example.xlsx  util.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: codeql.yml
blueprints/admin/: admin.py
blueprints/api/: api.py  marshallers.py  utils.py
blueprints/catalog/: catalog.py
blueprints/landing/: landing.py
blueprints/login/: login.py
blueprints/manage/: manage.py
blueprints/teacher/: teacher.py
db/: __all_models.py
db/models/: achievement.py  balances.py  basis.py  criteria.py  gift.py  group.py  news.py  order.py  transaction.py  user.py
migrations/: env.py
migrations/versions/: 0245d7af9cc6_remove_is_approved_and_is_disapproved_.py  1904b3533d25_add_promo_price_column_to_gift.py  1a8918e45ee9_add_nickname_in_user_model.py  230d1cfe0765_add_image_columns_to_gift_and_user.py  2361538ac6c0_add_alternative_id_for_invalidating_.py  736a5f7f2b1b_update_user_model_for_sso_auth_remove_.py  7c71fc44406c_make_is_user_achievable_not_nullable.py  (+11 more)
nginx/: Dockerfile  default.conf
protonCoin/: Dockerfile  __init__.py  boot.sh  config.py  debug_config.py  uploads.py  util.py
scripts/: create_users.py
src/: app.py  util.py
static/: 403.html  404.html  500.html  common_funcs.js  site.webmanifest
templates/: common.html  webp_viewer.html
(+258 files in other folders)
